# rusted-git

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  KEY_CONFIG.md  LICENSE.md  Makefile  NIGHTLIES.md  README.md  THEMES.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: brew.yml  cd.yml  ci.yml  nightly.yml
asyncgit/: Cargo.toml  README.md
asyncgit/src/: create_pr.rs  lib.rs
asyncgit/src/sync/: commit.rs  graph_lanes.rs  graph_log.rs  hooks.rs  mod.rs  reword.rs  sign.rs  status.rs  utils.rs
asyncgit/src/sync/branch/: mod.rs
filetreelist/: Cargo.toml  README.md
filetreelist/src/: filetree.rs
git2-hooks/: Cargo.toml
git2-testing/: Cargo.toml
graphify-out/: .graphify_analysis.json  .graphify_labels.json  GRAPH_REPORT.md  graph.html  manifest.json
graphify-out/cache/: stat-index.json
invalidstring/: Cargo.toml  README.md
scopetime/: Cargo.toml  README.md
src/: app.rs  args.rs  input.rs  main.rs  options.rs  queue.rs  rusted_git.rs  strings.rs
src/components/: commitlist.rs  mod.rs  revision_files.rs  status_tree.rs  textinput.rs
src/components/utils/: statustree.rs
src/keys/: key_config.rs  key_list.rs
src/popups/: help.rs
src/snapshots/: rusted_git__rusted_git__tests__app_loading.snap  rusted_git__rusted_git__tests__app_loading_finished.snap  rusted_git__rusted_git__tests__app_log_tab_showing_one_commit.snap
src/tabs/: create_pr.rs  gitignore.rs  mod.rs  refgraph.rs  revlog.rs
src/ui/: style.rs
wix/: main.wxs
