[package]
name = "asyncgit"
version = "0.28.1"
authors = ["extrawurst <mail@rusticorn.com>"]
edition = "2021"
description = "allow using git2 in a asynchronous context"
homepage = "https://github.com/tiagoyamashita/rusted-git"
repository = "https://github.com/tiagoyamashita/rusted-git"
readme = "README.md"
license = "MIT"
categories = ["asynchronous", "concurrency"]
keywords = ["git"]

[dependencies]
bitflags = "2"
crossbeam-channel = "0.5"
dirs = "6.0"
easy-cast = "0.5"
fuzzy-matcher = "0.3"
git2 = { version = "0.21", features = ["https"] }
git2-hooks = { path = "../git2-hooks", version = "0.7" }
gix = { version = "0.84.0", default-features = false, features = ["mailmap", "max-performance", "revision", "sha1", "sha256", "status"] }
log = "0.4"
# git2 = { path = "../../extern/git2-rs", features = ["vendored-openssl"]}
# git2 = { git="https://github.com/extrawurst/git2-rs.git", rev="fc13dcc", features = ["vendored-openssl"]}
# pinning to vendored openssl, using the git2 feature this gets lost with new resolver
openssl-sys = { version = "0.9", features = ["vendored"], optional = true }
rayon = "1.11"
rayon-core = "1.13"
scopetime = { path = "../scopetime", version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3"
thiserror = "2.0"
unicode-truncate = "2.0"
url = "2.5"

[dev-dependencies]
env_logger = "0.11"
invalidstring = { path = "../invalidstring", version = "0.1" }
pretty_assertions = "1.4"
serial_test = "3.3"

[features]
default = ["trace-libgit"]
trace-libgit = []
vendor-openssl = ["openssl-sys"]
